--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
 user.properties.file=/Users/JohnGalt/Library/Application Support/NetBeans/8.2/build.properties
+application.args=1500
